	- Isaac.GetPoolIdByName(poolName) - returns the id of a given custom pool
	- Room:SetItemPool(ItemPoolType PoolType) - sets the pool to use when the game needs to generate random collectibles in the current room
	- Room:GetItemPool(int Seed, boolean Raw) - Retrieves the pooltype the game would use to generate random collectibles in the current room.
* ModCallbacks:
	- POST versions of MC_PRE_PLAYER_ADD/REMOVE_COSTUME
	- MC_POST_FORCE_PILL_EFFECT
	- MC_EVALUATE_CUSTOM_CACHE(Player, CustomCacheTag, float value)
		Cache-style evaluation for custom player attributes.
		Return a number to modify the value. Modified values are passed to the next callback.
		CustomCacheTags must always be all lowercase.
		Optional param: CustomCacheTag
	- MC_EVALUATE_FAMILIAR_MULTIPLIER(Familiar, float mult, Player)
		Called when a familiar's cached multiplier needs to be re-evaluated.
		Return a number to modify the multiplier. Modified values are passed to the next callback.
		Optional param: FamiliarVariant
* Isaac:
	- GetPoolIdByName(string Name) - returns -1 if the pool is not found.
* EntityPlayer:
	- GetMovingBoxContents()
	- GetTearDisplacement() - Returns the player's TearDisplacement value, used to check what eye the player is shooting from. 1 means that the last shot was from the right eye, -1 means the opposite.
	- AddCustomCacheTag(string OR {string, string, ...}, bool evaluateItemsNow) - Add CustomCacheTag(s) to be evaluated next time EvaluateItems runs (which is right now, if the optional boolean is passed).
	- GetCustomCacheValue(string CustomCacheTag) - Returns the current cached value for the specified CustomCacheTag. Will return 0 by default if the provided tag has not been evaluated.
* EntityFamiliar:
	- InvalidateCachedMultiplier() - Makes it so that the next time GetMultiplier is called, MC_EVALUATE_FAMILIAR_MULTIPLIER is triggered to recalculate/allow modifying the multiplier.
* EntityNPC: