@@ -5,6 +5,7 @@ Additions:
 	- Isaac.GetPoolIdByName(poolName) - returns the id of a given custom pool
 	- Room:SetItemPool(ItemPoolType PoolType) - sets the pool to use when the game needs to generate random collectibles in the current room
 	- Room:GetItemPool(int Seed, boolean Raw) - Retrieves the pooltype the game would use to generate random collectibles in the current room.
+	- ItemPool:GetNumItemPools() - Retrieves the total number of itempools in the game, including custom itempools
 * ModCallbacks:
 	- POST versions of MC_PRE_PLAYER_ADD/REMOVE_COSTUME
 	- MC_POST_FORCE_PILL_EFFECT
